@@ -3,8 +3,8 @@ name: $(Date:yyyyMMdd)$(Rev:rr)
 # trigger build only after successful test on main-branch
 resources:
   pipelines:
-  - pipeline: tox-testing
-    source: tox-testing
+  - pipeline: testing
+    source: testing
     trigger:
       branches:
         include:
