@@ -1,7 +1,7 @@
 --- build/sphinx/html/index.html.orig	2022-03-03 17:41:08.481169450 +0100
 +++ build/sphinx/html/index.html	2022-03-03 17:46:43.226602844 +0100
 @@ -87,6 +87,7 @@
- <a class="reference external image-reference" href="https://dev.azure.com/dominikkriegner/xrayutilities/_build"><img alt="Unit test status" src="https://dev.azure.com/dominikkriegner/xrayutilities/_apis/build/status/tox-testing?repoName=dkriegner%2Fxrayutilities&amp;branchName=main" /></a>
+ <a class="reference external image-reference" href="https://dev.azure.com/dominikkriegner/xrayutilities/_build"><img alt="Unit test status" src="https://dev.azure.com/dominikkriegner/xrayutilities/_apis/build/status/testing?repoName=dkriegner%2Fxrayutilities&amp;branchName=main" /></a>
  <p>If you look for downloading the package go to <a class="reference external" href="https://sourceforge.net/projects/xrayutilities">Sourceforge</a> or <a class="reference external" href="https://github.com/dkriegner/xrayutilities">GitHub</a> (source distribution) or the <a class="reference external" href="https://pypi.python.org/pypi/xrayutilities">Python package index</a> (MS Windows binary).</p>
  <p>Read more about <em>xrayutilities</em> below or in <a class="reference external" href="http://dx.doi.org/10.1107/S0021889813017214">Journal of Applied Crystallography 2013, Volume 46, 1162-1170</a></p>
 +<p>This documentation can also be downloaded in <a href="xrayutilities.pdf">PDF format</a>.</p>
